# CodeWhale

./: .gitattributes  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOFF_v0.8.51.md  README.es-419.md  README.ja-JP.md  README.ko-KR.md  README.md  README.pt-BR.md  README.vi.md  README.zh-CN.md  SECURITY.md  config.example.toml
.github/: AUTHOR_MAP
.github/workflows/: auto-tag.yml  release.yml  web.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: chat_completions.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  update.rs
crates/config/: Cargo.toml
crates/config/assets/: models_dev.bundled.json
crates/config/src/: external_credentials.rs  lib.rs  provider.rs  provider_defaults.rs  provider_kind.rs  tests.rs
crates/config/src/catalog/: tests.rs
crates/config/src/route/: tests.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/tests/: parity_protocol.rs
crates/release/: Cargo.toml
crates/release/src/: lib.rs
crates/secrets/src/: lib.rs
crates/state/src/: lib.rs
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui/assets/: model_catalog.bundled.json
crates/tui/locales/: en.json  es-419.json  ja.json  ko.json  pt-BR.json  vi.json  zh-Hans.json  zh-Hant.json
crates/tui/src/: artifacts.rs  automation_manager.rs  child_env.rs  client.rs  command_safety.rs  compaction.rs  config.rs  config_persistence.rs  config_ui.rs  context_report.rs  cost_status.rs  deepseek_theme.rs  error_taxonomy.rs  external_credentials.rs  features.rs  hooks.rs  localization.rs  main.rs  mcp.rs  model_inventory.rs  model_routing.rs  models.rs  models_dev_live.rs  oauth.rs  pricing.rs  prompts.rs  provider_lake.rs  provider_readiness.rs  purge.rs  route_billing.rs  route_runtime.rs  runtime_api.rs  runtime_threads.rs  schema_migration.rs  scorecard.rs  seam_manager.rs  settings.rs  slop_ledger.rs  test_support.rs  tool_output_receipts.rs  (+5 more)
crates/tui/src/client/: chat.rs  responses.rs
crates/tui/src/commands/: config.rs  core.rs  debug.rs  hooks.rs  mod.rs  provider.rs  share.rs  skills.rs  traits.rs  user_commands.rs  user_registry.rs
crates/tui/src/config/: models.rs  tests.rs
crates/tui/src/core/: engine.rs  events.rs  mod.rs  session.rs
crates/tui/src/fleet/: executor.rs  ledger.rs  manager.rs  profile.rs  roster.rs  scheduler.rs  task_spec.rs  worker_runtime.rs
crates/tui/src/llm_client/: mod.rs
crates/tui/src/mcp/: tests.rs
crates/tui/src/model_context/: fragment.rs  mod.rs  world_state.rs
crates/tui/src/palette/: adapt.rs  detect.rs  mod.rs  tests.rs  themes.rs  tokens.rs
crates/tui/src/plugins/: discovery.rs  manifest.rs  mod.rs  registry.rs  tests.rs
crates/tui/src/prompts/: agent.txt  base.md  base.txt  constitution.md  constitution.yaml  core_execution.md  render_constitution.py  text.rs
crates/tui/src/rlm/: session.rs
crates/tui/src/runtime_api/: tests.rs
crates/tui/src/runtime_threads/: tests.rs
crates/tui/src/runtime_web/: app.mjs
crates/tui/src/sandbox/: backend.rs  bwrap.rs  landlock.rs  mod.rs  policy.rs  process_hardening.rs  seccomp.rs
crates/tui/src/skills/: audit.rs  install.rs  mod.rs  mutation.rs  package_digest.rs  roots.rs  system.rs
crates/tui/src/tools/: automation.rs  canonical_action.rs  (+19 more)
crates/tui/tests/: adaptive_evidence_acceptance.rs  cache_guard.rs  coordination_acceptance.rs  integration_mock_llm.rs  palette_audit.rs  qa_pty.rs  release_runtime_qa.rs  runtime_web_client.test.mjs  skill_cli.rs  tool_lifecycle_acceptance.rs
crates/workflow-js/src/: driver.rs  vm.rs
crates/workflow-js/tests/: vm_tests.rs
crates/workflow/src/: elevation.rs  js_authoring.rs  lib.rs  replay.rs  role_resolve.rs
docs/: ACCESSIBILITY.md  ACP_REGISTRY_SUBMISSION.md  ARCHITECTURE.md  AUTOMATIC_WORKFLOWS.md  CONFIGURATION.md  CONTRIBUTORS.md  FLEET.md  FLEET_WORKFLOW_TUTORIAL.md  GUIDE.md  INSTALL.md  KEYBINDINGS.md  LEGACY_RUST_AUDIT_0_7_6.md  MCP.md  MODES.md  MOTION_CONTRACT.md  OPERATIONS_RUNBOOK.md  PROVIDERS.md  RELEASE_RUNBOOK.md  REMOTE_SETUP_DESIGN.md  RUNTIME_API.md  RUNTIME_SIMPLIFICATION_DESIGN.md  SANDBOX.md  SETTINGS_PICKER_FRAMEWORK.md  SKILLS.md  SUBAGENTS.md  TERMUX.md  TOOL_LIFECYCLE.md  TOOL_SURFACE.md  TUI_DOGFOOD_INTEGRATION_CHECK_2026-07-12.md  TUI_DOG_008_STATE_MATRIX_2026-07-12.md  TUI_PARALLEL_REVIEW_2026-07-12.md  V0866_RELEASE_LEDGER.md  V0_9_0_EXECUTION_MAP.md  public-surface-facts.json
docs/architecture/: command-dispatch.md  delegated-coordination.md  pr-issue-evidence-prep.md
docs/evidence/: layer-5-1-user-command-registry-evidence.md  v091-empty-work-surface-receipt.md  v091-public-surface-readiness.md
docs/examples/dogfood-automatic/: wf_a2_staged_bugfix.workflow.js
docs/releases/: v0.8.68-release-candidate.md  v0.9.1-completion-ledger.md
docs/skills/: README.md
integrations/feishu-bridge/: package-lock.json  package.json
npm/codewhale/: README.md  package.json
npm/codewhale/scripts/: install.js
npm/codewhale/test/: install.test.js
scripts/: check-coauthor-trailers.py  check-tui-product-vocabulary.sh  test_check_coauthor_trailers.py
scripts/benchmarks/: pinchbench_codewhale.py
scripts/release/: check-versions.sh  generate-release-body.sh  generate-release-body.test.sh
web/: README.md  next.config.ts  package-lock.json  package.json
web/app/[locale]/: layout.tsx  page.tsx
web/components/: faq-search.tsx  footer.tsx  install-binary.tsx
web/data/: latest-published-release.json
web/lib/: check-facts.test.ts  deploy-preflight.test.ts  docs-map.ts  facts-drift.test.ts  facts-drift.ts  facts.generated.ts  facts.test.ts  facts.ts  faq-source.test.ts  faq-source.ts  install-binary-snippets.ts  page-meta.test.ts  page-meta.ts  public-copy.test.ts  public-surface-contract.test.ts  release-credits.ts
web/scripts/: check-cloudflare-deploy-env.mjs  check-facts.mjs  compare-deployed-facts.mjs  derive-facts.mjs  facts-lib.mjs
workflows/: stopship.workflow.js
(+144 files in other folders)
