[workspace]
members = [
    "crates/agent",
    "crates/app-server",
    "crates/cli",
    "crates/config",
    "crates/core",
    "crates/execpolicy",
    "crates/hooks",
    "crates/mcp",
    "crates/protocol",
    "crates/release",
    "crates/secrets",
    "crates/state",
    "crates/tools",
    "crates/tui",
    "crates/tui-core",
]
default-members = ["crates/cli", "crates/app-server", "crates/tui"]
resolver = "2"

[workspace.package]
version = "0.8.50"
edition = "2024"
# Rust 1.88 stabilized `let_chains` in `if`/`while` conditions, which the
# codebase relies on extensively. Cargo enforces this so users on older
# toolchains get a clear "package requires rustc 1.88+" error instead of a
# confusing E0658 from rustc.
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/Hmbown/CodeWhale"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.5", features = ["json"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5"
dirs = "6.0.0"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "socks"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
semver = "1.0.28"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.7"
sha2 = "0.10"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["v4"] }

# Internal workspace members. Their version is implied by each path
# target's Cargo.toml, which already uses `version.workspace = true`
# pointing at `[workspace.package].version` above. A release only
# edits that one field — the entries below pick up the new version
# automatically.
codewhale-agent = { path = "crates/agent" }
codewhale-app-server = { path = "crates/app-server" }
codewhale-config = { path = "crates/config" }
codewhale-core = { path = "crates/core" }
codewhale-execpolicy = { path = "crates/execpolicy" }
codewhale-hooks = { path = "crates/hooks" }
codewhale-mcp = { path = "crates/mcp" }
codewhale-protocol = { path = "crates/protocol" }
codewhale-release = { path = "crates/release" }
codewhale-secrets = { path = "crates/secrets" }
codewhale-state = { path = "crates/state" }
codewhale-tools = { path = "crates/tools" }