[package]
name = "codewhale-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Codex-style app-server transport for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
codewhale-agent.workspace = true
codewhale-config.workspace = true
codewhale-core.workspace = true
codewhale-execpolicy.workspace = true
codewhale-hooks.workspace = true
codewhale-mcp.workspace = true
codewhale-protocol.workspace = true
codewhale-state.workspace = true
codewhale-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.16"
tower = "0.5"
