[package]
name = "codewhale-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agentic terminal facade for open-source and open-weight coding models"

[[bin]]
name = "codewhale"
path = "src/main.rs"

# Short-form convenience alias — forwards to `codewhale` silently.
[[bin]]
name = "codew"
path = "src/bin/codew_legacy_shim.rs"

# Legacy alias — forwards to `codewhale` and prints a deprecation notice.
# Will be removed in v0.9.0.
[[bin]]
name = "deepseek"
path = "src/bin/deepseek_legacy_shim.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
codewhale-agent.workspace = true
codewhale-app-server.workspace = true
codewhale-config.workspace = true
codewhale-execpolicy.workspace = true
codewhale-mcp.workspace = true
codewhale-release.workspace = true
codewhale-secrets.workspace = true
codewhale-state.workspace = true
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
semver.workspace = true
tokio.workspace = true
sha2.workspace = true
tempfile = "3.16"
tracing.workspace = true

[dev-dependencies]
