[package]
name = "codewhale-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime boundaries for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
codewhale-agent.workspace = true
codewhale-config.workspace = true
codewhale-execpolicy.workspace = true
codewhale-hooks.workspace = true
codewhale-mcp.workspace = true
codewhale-protocol.workspace = true
codewhale-state.workspace = true
codewhale-tools.workspace = true
serde_json.workspace = true
uuid.workspace = true
