[package]
name = "codewhale-execpolicy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Execution policy and approval model parity for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
codewhale-protocol.workspace = true
serde.workspace = true
