[package]
name = "codewhale-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool invocation lifecycle, schema validation, and scheduler parallelism for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
codewhale-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
